<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <TextView
                android:text="@string/new_token"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="17dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

        <TextView
                android:text="@string/limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:id="@+id/textView2" android:layout_marginTop="32dp"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/limit_bar"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginTop="16dp"/>
        <Switch
                android:text="@string/dynamic_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enable_dynamic_limit"
                app:layout_constraintTop_toBottomOf="@+id/limit_bar" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginTop="24dp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/enable_dynamic_limit"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginTop="32dp"/>
        <Button
                android:text="@string/create_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/bt_location" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"/>
        <TextView
                tools:text="rua do brasil, Boa vista, PE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_txt"
                app:layout_constraintTop_toBottomOf="@+id/bt_location" android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/create_token"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_create_dtoken"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="@+id/source"/>
        <TextView
                tools:text="$120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/limit_txt" app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/textView2"/>
        <Spinner
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:id="@+id/source" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/location_txt" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>